--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container flex justify-center items-center h-screen">
         <div
-            class="sub-container rounded-lg p-7 bg-black w-full max-w-sm sm:max-w-md md:max-w-lg lg:w-[28%] h-[500px] overflow-auto">
+            class="sub-container rounded-lg px-7 bg-black w-full max-w-sm sm:max-w-md md:max-w-lg lg:w-[28%] h-[500px] overflow-auto">
             <div
                 class="display sticky top-0 z-[2] bg-black flex justify-between items-center border-2 border-indigo-400 p-4 rounded-xl text-white my-5">
                 <div>
@@ -28,7 +28,7 @@
                 </div>
                 <p id="counter" class="bg-indigo-400 w-12 h-12 flex items-center justify-center rounded-full font-bold text-lg text-white">0</p>
             </div>
-            <div class="enter-todo sticky top-23 z-[1] flex text-white my-5">
+            <div class="enter-todo bg-black py-2 sticky top-22 z-[1] flex text-white my-5">
                 <input id="TodoText" class="bg-gray-800 p-1 w-[100%] rounded-lg text-sm outline-none" type="text"
                     placeholder="Write your task">
                 <button id="add" class="bg-indigo-400 w-10 h-10 flex items-center justify-center rounded-full ml-2 cursor-pointer text-white text-xl font-bold" value="+">+</button>
