--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 
-<body>
+<body class="h-14 bg-linear-to-bl from-violet-500 to-fuchsia-500 bg-no-repeat bg-cover bg-center h-screen">
     <div class="container flex justify-center items-center h-screen">
         <div
             class="sub-container rounded-lg px-7 bg-black w-full max-w-sm sm:max-w-md md:max-w-lg lg:w-[28%] h-[612px] overflow-auto">
